--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 	<img src="img/dice2.jpg" alt="dice">
 	<div class="all">
 		<div class="screen">
-			<span>0</span>
-			<button>ROLL!</button>
-			<span>0</span>
+			<span id="dice1">0</span>
+			<button id="button">ROLL!</button>
+			<span id="dice2">0</span>
 		</div>
 	</div>
+	<script src="dice.js"></script>
 </body>
 </html>
