--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 	<div class="all">
 		<div class="screen">
 			<span id="dice1">0</span>
-			<button id="button">ROLL!</button>
+			<button id="reset">RESET!</button>
+			<button id="roll">ROLL!</button>
 			<span id="dice2">0</span>
 		</div>
 	</div>
